# wasm-dev-book-hello-wasm

./: Cargo.toml  README.md  index.html  loadWasm.js
src/: lib.rs
