[package]
name = "wasm-dev-book-hello-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] } # この行を更新
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinymt = { git = "https://github.com/mizdra/rust-tinymt", tag = "0.1.0" }

[lib]
crate-type = ["cdylib"]
